--- a/client/app/completedApps/completedApps.html
+++ b/client/app/completedApps/completedApps.html
@@ -29,8 +29,9 @@
 
       <!-- 1) Open Position Card, has 5 fields -->
       <!-- i) COMPANY, ii) ROLE, iii) JOB DESC, iv) APPLIED THRU, v) CONTACTS-->
-      <li id="card">
-        <div id="card-title"><strong>Open Position</strong><br></div>
+      <li id="card" style="overflow:scroll">
+        <div id="card-title"><strong>Application</strong><br></div>
+        <div><span>{{result.dateApplied.slice(0,10)}}</span></div>
 
         <!-- i) COMPANY -->
         <div id="field" ng-click="enableEditor($index)"><strong>Company:</strong><br>
@@ -40,23 +41,15 @@
           <input ng-model="edit.companyName" ng-show="edit.editorEnabled" id="field" class="mdl-textfield__input" type="text">
         </div>
 
-        <!-- ii) ROLE -->
-        <div id="field" ng-click="enableEditor($index)"><strong>Role:</strong><br>
+        <!-- ii) POSITION -->
+        <div id="field" ng-click="enableEditor($index)"><strong>Position:</strong><br>
           <span ng-hide="edit.editorEnabled">{{result.role}}</span>
         </div>
         <div ng-show="edit.editorEnabled">
           <input ng-model="edit.role" ng-show="edit.editorEnabled" id="field" class="mdl-textfield__input" type="text">
         </div>
 
-        <!-- iii) JOB DESCRIPTION -->
-        <div id="field" ng-click="enableEditor($index)"><strong>Job Description:</strong><br>
-         <span ng-hide="edit.editorEnabled">{{result.jobDescription}}</span>
-        </div>
-        <div ng-show="edit.editorEnabled">
-         <input ng-model="edit.jobDescription" ng-show="edit.editorEnabled" id="field" class="mdl-textfield__input" type="text">
-        </div>
-
-        <!-- iv) APPLIED THROUGH -->
+        <!-- iii) APPLIED THROUGH -->
         <div id="field" ng-click="enableEditor($index)"><strong>Applied Through:</strong><br>
           <span ng-hide="edit.editorEnabled">{{result.appliedThrough}}</span>
         </div>
@@ -64,19 +57,32 @@
           <input ng-model="edit.appliedThrough" ng-show="edit.editorEnabled" id="field" class="mdl-textfield__input" type="text">
         </div>
 
-        <!-- v) CONTACT NAME -->
+        <!-- iv) CONTACT NAME -->
         <div id="field" ng-click="enableEditor($index)"><strong>Contact Name:</strong><br>
           <span ng-hide="edit.editorEnabled">{{result.contactName}}</span>
         </div>
-
         <div ng-show="edit.editorEnabled">
           <input ng-model="edit.contactName" ng-show="edit.editorEnabled" id="field" class="mdl-textfield__input" type="text">
         </div>
 
-        <!-- Save Button -->
-        <div class='btn-group'>
-          <br /> <button class='btn btn-info' ng-click="save($index, edit)" ng-show="edit.editorEnabled">Save</button>
+        <!-- v) CONTACT EMAIL -->
+        <div id="field" ng-click="enableEditor($index)"><strong>Contact Email:</strong><br>
+          <span ng-hide="edit.editorEnabled">{{result.contactEmail}}</span>
         </div>
+        <div ng-show="edit.editorEnabled">
+          <input ng-model="edit.contactEmail" ng-show="edit.editorEnabled" id="field" class="mdl-textfield__input" type="text">
+        </div>
+
+        <!-- vi) CONTACT PHONE -->
+        <div id="field" ng-click="enableEditor($index)"><strong>Contact Phone:</strong><br>
+          <span ng-hide="edit.editorEnabled">{{result.contactPhone}}</span>
+        </div>
+        <div ng-show="edit.editorEnabled">
+          <input ng-model="edit.contactPhone" ng-show="edit.editorEnabled" id="field" class="mdl-textfield__input" type="text">
+        </div>
+
+        <!-- Save Button -->
+        <button class='btn btn-info' id='btn-info' ng-click="save($index, edit)" ng-show="edit.editorEnabled">Save</button>
 
       </li><!-- Closing Open Position Card -->
 
