style(style.css): highlight navbar

--- a/client/index.html
+++ b/client/index.html
@@ -25,7 +25,7 @@
   <body>
 
     <!-- GLOBAL NAV BAR FIXED TOP -->
-    <nav class="navbar navbar-default navbar-fixed-top" id="navbar-fixed-top" role="navigation">
+    <nav class="navbar navbar-inverse navbar-fixed-top" id="navbar-fixed-top" role="navigation">
 
       <!-- CONTAINER for NAV BAR -->
       <div class="container">
@@ -42,7 +42,7 @@
         </div>
 
         <!-- NAV BAR -->
-        <div id="navbar" class="navbar-collapse collapse" uib-collapse="navCollapsed">
+        <div class="navbar-collapse collapse" uib-collapse="navCollapsed">
 
           <div ng-controller="AuthController">
             <!-- NAV BAR LEFT -->
