--- a/client/index.html
+++ b/client/index.html
@@ -25,7 +25,7 @@
   <body>
 
     <!-- GLOBAL NAV BAR FIXED TOP -->
-    <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
 
       <!-- CONTAINER for NAV BAR -->
       <div class="container">
