--- a/client/app/completedApps/completedApps.html
+++ b/client/app/completedApps/completedApps.html
@@ -82,7 +82,7 @@
         </div>
 
         <!-- Save Button -->
-        <button class='btn btn-info' id='btn-info' ng-click="save($index, edit[$index])">Save</button>
+        <button class='btn btn-info' id='btn-info' ng-click="save($index, edit[$index])" ng-show="edit[$index].editorEnabled">Save</button>
 
       </li><!-- Closing Open Position Card -->
 
