style(add accounts page):

--- a/client/index.html
+++ b/client/index.html
@@ -75,6 +75,7 @@
     <script src="/allApps/allAppsController.js"></script>
     <script src="/addApps/addAppsController.js"></script>
     <script src="/completedApps/completedAppsController.js"></script>
+    <script src="/account/accountController.js"></script>
     <script src="/services/services.js"></script>
     <script src="/login/auth.js"></script>
   </body>
