feat(account.html): add list items

--- a/client/app/account/account.html
+++ b/client/app/account/account.html
@@ -4,13 +4,10 @@
   <!-- ACCOUNT VIEW title -->
   <div class="page-header"><h3>My Account</h3></div>
 
-  <div class="panel panel-default">
-    <div class="panel-heading">
-      <h3 class="panel-title"></h3>
-    </div>
-    <div class="panel-body">
-      Panel content
-    </div>
-  </div>
+  <ul class="list-group">
+    <li class="list-group-item"><strong>Joined on : </strong></li>
+    <li class="list-group-item"><strong>Username : </strong></li>
+    <li class="list-group-item"><strong>Change password</strong></li>
+  </ul>
 
 </div>
