feat(cover.html): add cover page

--- a/client/app/cover/cover.html
+++ b/client/app/cover/cover.html
@@ -1,1 +1,6 @@
-
+<div class="jumbotron">
+  <h1>Apply the smart way</h1>
+  <p>Tired of losing track of when you last followed up with a hiring manager?</p>
+  <p>Not to worry. Let AppTrak do that for you. </p>
+  <p><a class="btn btn-primary btn-lg" href="#" role="button">Get started</a></p>
+</div>
