--- a/client/index.html
+++ b/client/index.html
@@ -48,7 +48,7 @@
 
           <!-- NAV BAR RIGHT -->
             <ul class="nav navbar-nav navbar-right">
-              <li><a class="mdl-navigation__link" ng-hide='!isAuth()'>Welcome {{ username }}!</a></li>
+              <li><a href="/#!/myaccount" class="mdl-navigation__link" ng-hide='!isAuth()'>Welcome {{ username }}!</a></li>
               <li><a href="/#!/login" class="mdl-navigation__link" ng-click="signout()" ng-hide='!isAuth()'>Log Out</a></li>
             </ul>
 
