style(style.css): change body fonts

--- a/client/app/allApps/allApps.html
+++ b/client/app/allApps/allApps.html
@@ -24,7 +24,7 @@
   </div>
 
   <!-- ng-repeat APPLICATIONS. It has 1) Open Position Card, 2) Add Stage Card -->
-  <ul ng-repeat='result in results | filter:searchText track by $index' ng-model='application'>
+  <ul ng-repeat='result in results | filter:searchText track by $index' ng-model='application' id='body-font'>
     <div class="row">
 
       <!-- 1) Open Position Card, has 5 fields -->
