--- a/client/index.html
+++ b/client/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <link href="https://fonts.googleapis.com/css?family=Raleway:400,800|Source+Sans+Pro" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Raleway:400,800|Source+Sans+Pro:400,600" rel="stylesheet">
 
     <title>AppTrak</title>
     <base href="/" />
@@ -32,7 +32,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/">App|Trak</a>
+          <a class="navbar-brand" href="/#!/home">App|Trak</a>
         </div>
 
         <!-- NAV BAR -->
